# Pose_estimation_ros

./: CMakeLists.txt  package.xml
action/: hi_motion.action
config/: default.yaml  default1.yaml  default2.yaml
include/localization/: image_capture.h  localization_rough.h  motion_controller.h
src/: CMakeLists.txt  frame.cpp  image_capture.cpp  image_retrieve.cpp  motion_controller.cpp  pose_estimation.cpp  pose_estimation1.cpp
test/: CMakeLists.txt  expriment.txt  image_capture_test.cpp  img_loc_test.cpp  laser_test.cpp  localization_test.cpp  motionClient_test.cpp  motionServer.cpp  motion_controller_test.cpp  motion_cycle.cpp  obstacle_detector.cpp  pose_estimation_test.cpp
